--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 80px;
-  background-image: url(https://www.robertscheinfeld.com/wp-content/uploads/2012/03/sun-clouds1.jpg);
+  background-image: url(https://img.freepik.com/premium-photo/beach-with-sunset-sun-shining-through-clouds_865967-29759.jpg);
   background-size: cover;
 }
 
@@ -17,11 +17,11 @@ h1 {
 }
 
 strong {
-  color: rgb(250, 118, 10);
+  color: #fcfaf8;
 }
 
 a {
-  color: rgb(250, 118, 10);
+  color: #fcfaf8;
 }
 
 #text-area {
